--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <title>UML</title>
   </head>
   <body>
-<a href="lab1_exercise0.drawio.html">exercise 0</a>
-<a href="lab1_exercise1.drawio.html">exercise 1</a>
-<a href="lab1_exercise2.drawio.html">exercise 2</a>
-<a href="lab1_exercise3.drawio.html">exercise 3</a>    
+<a href="lab1/lab1_exercise0.drawio.html">lab 1 exercise 0</a>
+<a href="lab1/lab1_exercise1.drawio.html">lab 1 exercise 1</a>
+<a href="lab1/lab1_exercise2.drawio.html">lab 1 exercise 2</a>
+<a href="lab1/lab1_exercise3.drawio.html">lab 1 exercise 3</a>   
+<br>
+<a href="lab2/lab2_exercise0.drawio.html">lab 2 exercise 0</a>
+<a href="lab2/lab2_exercise1.drawio.html">lab 2 exercise 1</a>
+<a href="lab2/lab2_exercise2.drawio.html">lab 2 exercise 2</a> 
   </body>
 </html>
