--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 <a href="lab2/lab2_exercise0.drawio.html">lab 2 exercise 0</a>
 <a href="lab2/lab2_exercise1.drawio.html">lab 2 exercise 1</a>
 <a href="lab2/lab2_exercise2.drawio.html">lab 2 exercise 2</a> 
+<br>
+<a href="lab2/lab3_exercise0.drawio.html">lab 2 exercise 0</a>
+<a href="lab2/lab3_exercise1.drawio.html">lab 2 exercise 1</a>
+<a href="lab2/lab3_exercise2.drawio.html">lab 2 exercise 2</a>
+<a href="lab2/lab3_exercise3.drawio.html">lab 2 exercise 3</a> 
   </body>
 </html>
